--- a/TiposDeDatos/package.json
+++ b/TiposDeDatos/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:types": "tsc basics/types.ts --outdir dist/ && node dist/types.js"
+    "start:types": "tsc basics/types.ts --outdir dist/ && node dist/types.js",
+    "start:enums": "tsc basics/enums.ts --outdir dist/ && node dist/enums.js",
+    "start:interfaces": "tsc basics/interfaces.ts --outdir dist/ && node dist/interfaces.js"
   },
   "keywords": [],
   "author": "",
