--- a/TiposDeDatos/package.json
+++ b/TiposDeDatos/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:types": "tsc basics/types.ts --outdir dist/ && node dist/types.js",
     "start:enums": "tsc basics/enums.ts --outdir dist/ && node dist/enums.js",
-    "start:interfaces": "tsc basics/interfaces.ts --outdir dist/ && node dist/interfaces.js"
+    "start:interfaces": "tsc basics/interfaces.ts --outdir dist/ && node dist/interfaces.js",
+    "start:customTypes": "tsc basics/customTypes.ts --outdir dist/ && node dist/customTypes.js"
   },
   "keywords": [],
   "author": "",
