--- a/TiposDeDatos/package.json
+++ b/TiposDeDatos/package.json
@@ -7,7 +7,8 @@
     "start:types": "tsc basics/types.ts --outdir dist/ && node dist/types.js",
     "start:enums": "tsc basics/enums.ts --outdir dist/ && node dist/enums.js",
     "start:interfaces": "tsc basics/interfaces.ts --outdir dist/ && node dist/interfaces.js",
-    "start:customTypes": "tsc basics/customTypes.ts --outdir dist/ && node dist/customTypes.js"
+    "start:customTypes": "tsc basics/customTypes.ts --outdir dist/ && node dist/customTypes.js",
+    "start:clases": "tsc basics/clases.ts --outdir dist/ && node dist/clases.js"
   },
   "keywords": [],
   "author": "",
